Updated SHS docker image